<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/icon_home"
        />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        android:icon="@drawable/icon_category"
        />
    <item
        android:id="@+id/action_giohang"
        android:title="@string/action_giohang"
        android:icon="@drawable/icon_cart"


        />
    <item
        android:id="@+id/action_donhang"
        android:title="Đơn hàng"
        android:icon="@drawable/icon_order"
        />
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/icon_person"
        />
</menu>